--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "xmlhttprequest" : "*",
-    "request" : "*",
-    	"sprintf-js":"*",
-	"iconv":"*",
-"cheerio":"*",
+      "xmlhttprequest" : "*",
+      "request" : "*",
+      "sprintf-js":"*",
+      "iconv":"*",
+      "cheerio":"*"
   }
 }
